--- a/app/src/main/res/drawable/edittext_gray.xml
+++ b/app/src/main/res/drawable/edittext_gray.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/white" /> <!-- Background color of the EditText -->
+    <solid android:color="#EDEDED" /> <!-- Background color of the EditText -->
     <stroke
         android:width="2dp"
         android:color="#85000000" />
