--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#F4F4F4</color>
 
 <!--    <color name="greenlight">#6D9773</color>-->
 <!--    <color name="greendark">#0C3B2E</color>-->
