--- a/app/src/main/res/layout/welcome_page.xml
+++ b/app/src/main/res/layout/welcome_page.xml
@@ -34,6 +34,8 @@
 
     </LinearLayout>
 
+
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_go"
         android:layout_width="match_parent"
@@ -45,5 +47,16 @@
         android:textColor="@color/greendark"
         android:textStyle="bold"
         android:background="@drawable/button" />
+
+    <TextView
+        android:id="@+id/txt_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btn_go"
+        android:layout_marginBottom="16dp"
+        android:layout_centerHorizontal="true"
+        android:background="@color/greendark"
+        android:text="loading..."
+        android:textColor="@color/white" />
 
 </RelativeLayout>
