--- a/app/src/main/res/layout/frag_list_cabang.xml
+++ b/app/src/main/res/layout/frag_list_cabang.xml
@@ -22,7 +22,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/white">
             <TextView
                 android:id="@+id/txt_nama"
                 android:layout_width="wrap_content"
@@ -31,6 +32,13 @@
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="20dp"
+                android:background="@color/white"/>
+            <TextView
+                android:id="@+id/txt_kategori"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Kategori"
+                android:textColor="@color/black"
                 android:background="@color/white"/>
         </LinearLayout>
     </LinearLayout>
