--- a/app/src/main/res/layout/welcome_page.xml
+++ b/app/src/main/res/layout/welcome_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,8 +8,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingBottom="100dp"
         android:orientation="vertical"
         android:gravity="center"
         android:background="@color/greendark">
@@ -32,9 +33,23 @@
             android:textColor="@color/white"
             android:background="@color/greendark"/>
 
+        <ProgressBar
+            android:layout_marginTop="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/greendark"/>
+
     </LinearLayout>
 
 
+    <TextView
+        android:id="@+id/txt_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@color/greendark"
+        android:text="loading..."
+        android:textColor="@color/white" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_go"
@@ -42,21 +57,11 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="20dp"
-        android:layout_alignParentBottom="true"
         android:text="Let's Explore"
         android:textColor="@color/greendark"
         android:textStyle="bold"
         android:background="@drawable/button" />
 
-    <TextView
-        android:id="@+id/txt_loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/btn_go"
-        android:layout_marginBottom="16dp"
-        android:layout_centerHorizontal="true"
-        android:background="@color/greendark"
-        android:text="loading..."
-        android:textColor="@color/white" />
 
-</RelativeLayout>
+
+</LinearLayout>
